apps/linkding/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
        app.kubernetes.io/name: linkding
    spec:
      containers:
        - name: linkding
          image: "ghcr.io/sissbruecker/linkding:1.44.1"
          ports:
            - containerPort: 9090
          livenessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9090
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /etc/linkding/data
              name: linkding-data
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data
