apps/linkding/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      name: http
  selector:
    app: linkding
