apps/linkding/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linkding
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linkding.kube.local.gd`)
      kind: Rule
      services:
        - name: linkding
          port: 9090
  tls: {}
